fixed the scrollbar and not checking after load from file problems

--- a/fipogen/server/views/style.css
+++ b/fipogen/server/views/style.css
@@ -382,7 +382,7 @@ text-decoration: none;
 			grid-column: 2 / 6;
 			grid-row: 1 / 3;
 			overflow:hidden;
-			overflow-y:scroll;
+			/*overflow-y:scroll;*/
 			width:520px;
 			height: 100px;
             padding: 0px;
